Atualiza os projetos para o framework net7.0 Atualiza pacotes nuget Corrige problema na string de conexão com o banco de dados Inclui link para CRUD de Responsável no menu de navegação

--- a/PsicoOnline.WebApi/appsettings.Development.json
+++ b/PsicoOnline.WebApi/appsettings.Development.json
@@ -1,8 +1,12 @@
 {
+  "ConnectionStrings": {
+    "PsicoOnlineDBConnStr": "Data Source=ACER-NITRO-5;Initial Catalog=PsicoOnlineDB;Integrated Security=True;Trust Server Certificate=true;"
+  },
   "Logging": {
     "LogLevel": {
       "Default": "Information",
       "Microsoft.AspNetCore": "Warning"
     }
-  }
+  },
+  "AllowedHosts": "*"
 }
