--- a/PsicoOnline.WebApi/appsettings.json
+++ b/PsicoOnline.WebApi/appsettings.json
@@ -1,6 +1,6 @@
 {
   "ConnectionStrings": {
-    "PsicoOnlineDBConnStr": "Data Source=ACER-NITRO-5;Initial Catalog=PsicoOnlineDB;Integrated Security=True;"
+    "PsicoOnlineDBConnStr": "Data Source=ACER-NITRO-5;Initial Catalog=PsicoOnlineDB;Integrated Security=True;Trust Server Certificate=true;"
   },
   "Logging": {
     "LogLevel": {
