Remove pastas vazias dos projetos

--- a/PsicoOnline.Infrastructure/PsicoOnline.Infrastructure.csproj
+++ b/PsicoOnline.Infrastructure/PsicoOnline.Infrastructure.csproj
@@ -7,7 +7,9 @@
   </PropertyGroup>
 
   <ItemGroup>
-    <Folder Include="Data\Mappings\" />
+    <Compile Remove="Data\Mappings\**" />
+    <EmbeddedResource Remove="Data\Mappings\**" />
+    <None Remove="Data\Mappings\**" />
   </ItemGroup>
 
   <ItemGroup>
