Atualiza a string de conexão com o banco de dados

--- a/PsicoOnline.WebApi/appsettings.Development.json
+++ b/PsicoOnline.WebApi/appsettings.Development.json
@@ -1,6 +1,6 @@
 {
   "ConnectionStrings": {
-    "PsicoOnlineDBConnStr": "Data Source=ACER-NITRO-5;Initial Catalog=PsicoOnlineDB;Integrated Security=True;Trust Server Certificate=true;"
+    "PsicoOnlineDBConnStr": "Data Source=WALTZNITRO5;Initial Catalog=PsicoOnlineDB;Integrated Security=True;Trust Server Certificate=True;"
   },
   "Logging": {
     "LogLevel": {
