Atualiza o data source da string de conexão do banco de dados

--- a/PsicoOnline.WebApi/appsettings.Development.json
+++ b/PsicoOnline.WebApi/appsettings.Development.json
@@ -1,6 +1,6 @@
 {
   "ConnectionStrings": {
-    "PsicoOnlineDBConnStr": "Data Source=WALTZNITRO5;Initial Catalog=PsicoOnlineDB;Integrated Security=True;Trust Server Certificate=True;"
+    "PsicoOnlineDBConnStr": "Data Source=BOOK-CDCP43CNGP\\GALAXYBOOK4ULTRA;Initial Catalog=PsicoOnlineDB;Integrated Security=True;Trust Server Certificate=True;"
   },
   "Logging": {
     "LogLevel": {
