Organiza a estrutura da solução.

--- a/src/PsicoOnline.WebApi/PsicoOnline.WebApi.csproj
+++ b/src/PsicoOnline.WebApi/PsicoOnline.WebApi.csproj
@@ -11,7 +11,15 @@
     <PackageReference Include="Microsoft.AspNetCore.OpenApi" Version="9.0.2" />
     <PackageReference Include="Microsoft.EntityFrameworkCore.SqlServer" Version="9.0.2" />
     <PackageReference Include="Scalar.AspNetCore" Version="2.0.23" />
-    <PackageReference Include="Swashbuckle.AspNetCore" Version="7.3.1" />
+  </ItemGroup>
+
+  <ItemGroup>
+    <Folder Include="Controllers\" />
+    <Folder Include="Startup\" />
+  </ItemGroup>
+
+  <ItemGroup>
+    <ProjectReference Include="..\PsicoOnline.Infrastructure\PsicoOnline.Infrastructure.csproj" />
   </ItemGroup>
 
 </Project>
