--- a/src/PsicoOnline.Infrastructure/PsicoOnline.Infrastructure.csproj
+++ b/src/PsicoOnline.Infrastructure/PsicoOnline.Infrastructure.csproj
@@ -1,4 +1,4 @@
-<Project Sdk="Microsoft.NET.Sdk">
+﻿<Project Sdk="Microsoft.NET.Sdk">
 
   <PropertyGroup>
     <TargetFramework>net9.0</TargetFramework>
@@ -7,15 +7,19 @@
   </PropertyGroup>
 
   <ItemGroup>
-    <Compile Remove="Data\Mappings\**" />
-    <EmbeddedResource Remove="Data\Mappings\**" />
-    <None Remove="Data\Mappings\**" />
+    <Folder Include="Data\" />
+    <Folder Include="Logging\" />
+    <Folder Include="Mapper\" />
   </ItemGroup>
 
   <ItemGroup>
     <PackageReference Include="AutoMapper" Version="14.0.0" />
     <PackageReference Include="Microsoft.EntityFrameworkCore" Version="9.0.2" />
     <PackageReference Include="NLog" Version="5.4.0" />
+  </ItemGroup>
+
+  <ItemGroup>
+    <ProjectReference Include="..\PsicoOnline.Core\PsicoOnline.Core.csproj" />
   </ItemGroup>
 
 </Project>
