--- a/src/PsicoOnline.Infrastructure/PsicoOnline.Infrastructure.csproj
+++ b/src/PsicoOnline.Infrastructure/PsicoOnline.Infrastructure.csproj
@@ -9,11 +9,10 @@
   <ItemGroup>
     <Folder Include="Data\" />
     <Folder Include="Logging\" />
-    <Folder Include="Mapper\" />
   </ItemGroup>
 
   <ItemGroup>
-    <PackageReference Include="AutoMapper" Version="15.0.0" />
+    <PackageReference Include="Mapster" Version="7.4.0" />
     <PackageReference Include="Microsoft.EntityFrameworkCore" Version="9.0.6" />
     <PackageReference Include="NLog" Version="6.0.1" />
   </ItemGroup>
