--- a/src/PsicoOnline.WebApi/appsettings.json
+++ b/src/PsicoOnline.WebApi/appsettings.json
@@ -1,4 +1,5 @@
 {
+  "AllowedHosts": "*",
   "ConnectionStrings": {
     "PsicoOnlineDBConnStr": "Data Source=BOOK-CDCP43CNGP\\GALAXYBOOK4ULTRA;Initial Catalog=PsicoOnlineDB;Integrated Security=True;Trust Server Certificate=True;"
   },
@@ -7,6 +8,5 @@
       "Default": "Information",
       "MicrosoftAspNetCore": "Warning"
     }
-  },
-  "AllowedHosts": "*"
+  }
 }
