Centralize SDK and NuGet version management
Refactored solution to use Directory.Build.props and Directory.Packages.props for unified SDK and package version control. Removed redundant properties and explicit versions from project files. Replaced legacy .sln with modern .slnx format for improved project organization.

--- a/src/PsicoOnline.Infrastructure/PsicoOnline.Infrastructure.csproj
+++ b/src/PsicoOnline.Infrastructure/PsicoOnline.Infrastructure.csproj
@@ -1,14 +1,8 @@
 ﻿<Project Sdk="Microsoft.NET.Sdk">
 
-  <PropertyGroup>
-    <TargetFramework>net10.0</TargetFramework>
-    <ImplicitUsings>enable</ImplicitUsings>
-    <Nullable>enable</Nullable>
-  </PropertyGroup>
-
   <ItemGroup>
-    <PackageReference Include="Mapster" Version="7.4.0" />
-    <PackageReference Include="Microsoft.EntityFrameworkCore" Version="10.0.1" />
+    <PackageReference Include="Mapster" />
+    <PackageReference Include="Microsoft.EntityFrameworkCore" />
   </ItemGroup>
 
   <ItemGroup>
