--- a/src/PsicoOnline.UI/PsicoOnline.UI.csproj
+++ b/src/PsicoOnline.UI/PsicoOnline.UI.csproj
@@ -3,7 +3,7 @@
   <ItemGroup>
     <PackageReference Include="Microsoft.AspNetCore.Components.WebAssembly" />
     <PackageReference Include="Microsoft.AspNetCore.Components.WebAssembly.DevServer" PrivateAssets="all" />
-    <PackageReference Include="MudBlazor" Version="8.15.0" />
+    <PackageReference Include="MudBlazor" />
   </ItemGroup>
 
 </Project>
